# discord-qqmusic-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml
src/: bot.rs  error.rs  lib.rs  main.rs  qqmusic.rs  structs.rs
