[package]
name = "discord-qqmusic-bot"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.48.0", features = ["full"] }

serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model", "cache"] }

songbird = { version = "0.5.0", features = ["serenity", "rustls", "gateway"] }

reqwest = { version = "0.12.24", features = ["json"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

dotenv = "0.15.0"