[package]
name = "discord-qqmusic-bot"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1.48.0", features = ["full"] }

serenity = { version = "0.12.4", features = ["client", "gateway", "rustls_backend", "model", "cache"] }

songbird = { version = "0.5.0", features = ["serenity", "rustls", "driver", "gateway", "builtin-queue"] }

symphonia = { version = "0.5", features = ["aac", "mp3", "isomp4", "opt-simd"] }

reqwest = { version = "0.12.24", features = ["json"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"



log = "0.4"
env_logger = "0.11.8"
dotenvy = "0.15"

thiserror = "2.0.17"
anyhow = "1.0.100"
uuid = "1.18.1"
md5 = "0.8.0"
prettytable-rs = "0.10.0"
